--- a/main/templates/main/navbar.html
+++ b/main/templates/main/navbar.html
@@ -17,7 +17,13 @@
                 <li><a href="/services/water-heaters">Water Heaters</a></li>
             </ul>
         </li>
-        <li><a href="/company/{{ request.user.username }}">Profile</a></li>
+        {% if user.is_authenticated %}
+            <li><a href="/company/{{ request.user.username }}">Profile</a></li>
+            <li><a href="/logout">Logout</a></li>
+        {% else %}
+            <li><a href="/users/register">Register</a></li>
+            <li><a href="/users/login">Login</a></li>
+        {% endif %}
     </ul>
 </nav>
 
