--- a/static/css/style.css
+++ b/static/css/style.css
@@ -287,7 +287,7 @@ pre {
 /* =========================================== Forms ============================================ */
 
 form label {
-  display: none;
+  color: #000000;
 }
 
 form {
