--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,6 +1,6 @@
 {% extends 'main/base.html' %} 
 {% block title %}
-  User Type
+    User Type
 {%endblock %}
 
 {%block content %}
@@ -10,7 +10,7 @@
         <div style="margin-left: 50px" class="choice">
             <div class="company img" id="company">
                 <a href="/register/company">
-                    <img src="/static/css/company.png" alt="company" >
+                    <img src="/static/Images/company.webp" style="width: 100px" alt="company" >
                 </a>
             </div>
             <p class="label_images">Company</p>
@@ -19,7 +19,7 @@
         <div style="float: right; margin-right: 50px;" class="choice">
             <div class="img" id="customer">
                 <a href="/register/customer">
-                    <img src="/static/css/customer.png" alt="customer">
+                    <img src="/static/Images/customer.webp" style="width: 100px" alt="customer">
                 </a>
             </div>
             <p>Customer</p>
