--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -9,11 +9,9 @@
         <img class="home_logo" src="static/Images/logo.png" alt="logo">
     </div>
 
-
-    <!-- {% for service in services %}
-        <div class="list_services_profile">
-            <a href="/services/{{service.id}}">{{service.name}}</a>-- {{service.price_hour}}€/hour
-            <div class="line"></div>
-        </div>
-    {% endfor %} -->
+    <ul>
+        {% for service in top_services %}
+            <p>{{ service.name }} - Demandes : {{ service.num_requests }}</p>
+        {% endfor %}
+    </ul>
 {% endblock %}
